testsuite/tests/rename/should_fail/rnfail002.hs
-- !!! rn001: super-simple set of bindings,
-- !!!	incl wildcard pattern-bindings and *duplicates*

x = []
y = []
y = []
_ = []
_ = 1
z = []
_ = []
