testsuite/tests/rename/should_fail/rnfail002.stderr
rnfail002.hs:6:1: error: [GHC-29916] Multiple declarations of ‘y’
    At: rnfail002.hs:6:1
        rnfail002.hs:5:1

